--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
 PORT=3000 
 RECIPE_API_KEY=d3acf1a88bd44ab1ba31592ae6c6f007
+
+SpotifyClientID = 3bac4b43abce4a9891758cdadbfc2128;
+SpotifySecretID = 37ed69f1ddc04991a43b22b542f6958a;
+redirectURL = 'https://github.com/nassir1976/DAY8-NIGHT';
