--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "i": "^0.3.6",
     "method-override": "^3.0.0",
+    "node": "^15.7.0",
     "pg": "^8.5.1",
-    "superagent": "^6.1.0"
+    "spotify-web-api-node": "^5.0.2",
+    "superagent": "^6.1.0",
+    "y": "^0.3.2"
   }
 }
