--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@ PORT=3000
 TV_SHOW_API_KEY=4CKGF3ulZgkfJNAkxPCztgApmCXv-SQI
 RECIPE_API_KEY=d3acf1a88bd44ab1ba31592ae6c6f007
 
-SpotifyClientID = 3bac4b43abce4a9891758cdadbfc2128;
-SpotifySecretID = 37ed69f1ddc04991a43b22b542f6958a;
-redirectURL = 'https://github.com/nassir1976/DAY8-NIGHT';
+SpotifyClientID=3bac4b43abce4a9891758cdadbfc2128;
+SpotifySecretID=37ed69f1ddc04991a43b22b542f6958a;
+redirectURL='https://github.com/nassir1976/DAY8-NIGHT';
+
+DATABASE_URL=postgres://localhost:5432/day8_night
