--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/nassir1976/DAY8-NIGHT#readme",
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
@@ -26,8 +27,10 @@
     "method-override": "^3.0.0",
     "node": "^15.7.0",
     "pg": "^8.5.1",
+    "request": "^2.88.2",
     "spotify-web-api-node": "^5.0.2",
     "superagent": "^6.1.0",
+    "url": "^0.11.0",
     "y": "^0.3.2"
   }
 }
