--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=3000 
 TV_SHOW_API_KEY=4CKGF3ulZgkfJNAkxPCztgApmCXv-SQI
 RECIPE_API_KEY=d3acf1a88bd44ab1ba31592ae6c6f007
-DATABASE_URL=postgres://nassir:Detamo1976@localhost:5432/DAY8-NIGHT
+DATABASE_URL=postgres://nassir:Detamo1976@localhost:5432/day8_night
 accesstoken:BQDzakWT1_9OL-Gvd_d_ecE7DW1oXQC2i8xJ3Xf5qxTgPkSsi8mNVG1erVtgmjpa_KeUVtoRa2xCdEa1fwjPk1lK3-mLYyWF_6_alpIBd187IgjtwXdQDzoEtnToScNxZZuoyRpc5-FauKw2TrncFw
 
 
@@ -22,4 +22,4 @@ curl -H "Authorization: Basic M2JhYzRiNDNhYmNlNGE5ODkxNzU4Y2RhZGJmYzIxMjg6MzdlZD
 // ----------------------------- End Spotify ----------------------------- //
 
 
-DATABASE_URL=postgres://localhost:5432/day8_night
+
